--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server . -c-1 & webpack -w -p",
-    "compile":"http-server ./example -c-1"
+    "start": "http-server ./example -c-1 & webpack -w -p",
+    "compile": "http-server ./example -c-1"
   },
-  "dependencies": {
-    "mitt": "^1.1.2"
-  },
+  "dependencies": {},
   "author": "jimmytian villainhr",
-  "license": "apache-2.0"
+  "license": "apache-2.0",
+  "devDependencies": {
+    "mitt": "^1.1.2"
+  }
 }
