--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server ./example -c-1 & webpack -w -p",
-    "compile": "http-server ./example -c-1"
+    "compile": "http-server ./example -c-1",
+    "release":"webpack -w -p --config webpack.config.pro.js"
   },
   "dependencies": {},
   "author": "jimmytian villainhr",
