--- a/package.json
+++ b/package.json
@@ -13,5 +13,15 @@
   "license": "apache-2.0",
   "devDependencies": {
     "mitt": "^1.1.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JimmyVV/iv-panorama"
+  },
+  "keywords": [
+    "panorama",
+    "全景",
+    "360"
+  ],
+  "homepage": "https://github.com/JimmyVV/iv-panorama"
 }
